# LinuxApplicationDevelopment2025

./: .editorconfig  .gitignore  README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  fun.c  prog.c
03_Text/: randomize.sh
04_Debugging/: Makefile  expected_1.txt  expected_2.txt  range.c  scenario_1.gdb  scenario_2.gdb
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  protected.c
07_Environmental/: Makefile.am  configure.ac  rhasher.c  test_rhasher.sh
08_I18n/: Makefile.am  configure.ac
08_I18n/po/: ru.po
08_I18n/src/: Makefile.am  guess.c
09_PatchDiff/: Makefile  labyrinth.c  labyrinth_0.patch  labyrinth_1.patch  labyrinth_2.patch
10_LibTesting/: Makefile.am  configure.ac
10_LibTesting/src/: Makefile.am  buf.h
10_LibTesting/test/: Makefile.am  test.ts
11_Documenting/: Doxyfile.in  Makefile.am  configure.ac
11_Documenting/po/: ru.po
11_Documenting/src/: guess.c
12_InstallPackaging/: Doxyfile.in  Makefile.am  README.md  configure.ac
12_InstallPackaging/po/: POTFILES.in  ru.po
12_InstallPackaging/src/: Makefile.am  dict.c  dict.h  romanizer.c
12_InstallPackaging/tests/: Makefile.am  dict.ts
